// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`decorator.ts [babel-ts] format 1`] = `
"Leading decorators must be attached to a class declaration. (4:1)
  2 |
  3 | @dec
> 4 | enum E {}
    | ^
  5 |"
`;

exports[`decorator.ts [typescript] format 1`] = `
"Leading decorators must be attached to a class declaration (3:1)
  1 | declare function dec<T>(target: T): T;
  2 |
> 3 | @dec
    | ^^^^
> 4 | enum E {}
    | ^^^^^^^^^^
  5 |"
`;

exports[`enums.ts [babel-ts] format 1`] = `
"Leading decorators must be attached to a class declaration. (4:1)
  2 |
  3 | @decorator()
> 4 | enum Direction {
    | ^
  5 |                Up = 1,
  6 |   Down,
  7 |   Left,"
`;

exports[`enums.ts [typescript] format 1`] = `
"Leading decorators must be attached to a class declaration (3:1)
   1 | // https://github.com/typescript-eslint/typescript-eslint/pull/2375
   2 |
>  3 | @decorator()
     | ^^^^^^^^^^^^
>  4 | enum Direction {
     | ^^^^^^^^^^^^^^^^
>  5 |                Up = 1,
     | ^^^^^^^^^^^^^^^^
>  6 |   Down,
     | ^^^^^^^^^^^^^^^^
>  7 |   Left,
     | ^^^^^^^^^^^^^^^^
>  8 |   Right
     | ^^^^^^^^^^^^^^^^
>  9 | }
     | ^^
  10 |"
`;

exports[`function.ts [babel-ts] format 1`] = `
"Leading decorators must be attached to a class declaration. (4:1)
  2 |
  3 | @decorator()
> 4 | function foo(      ){}
    | ^
  5 |"
`;

exports[`function.ts [typescript] format 1`] = `
"Leading decorators must be attached to a class declaration (3:1)
  1 | // https://github.com/typescript-eslint/typescript-eslint/pull/2375
  2 |
> 3 | @decorator()
    | ^^^^^^^^^^^^
> 4 | function foo(      ){}
    | ^^^^^^^^^^^^^^^^^^^^^^^
  5 |"
`;

exports[`interface.ts [babel-ts] format 1`] = `
"Leading decorators must be attached to a class declaration. (5:1)
  3 |
  4 | @hello()
> 5 | interface MyInterface {id: string;
    | ^
  6 | }
  7 |"
`;

exports[`interface.ts [typescript] format 1`] = `
"Leading decorators must be attached to a class declaration (4:1)
  2 | // #4632
  3 |
> 4 | @hello()
    | ^^^^^^^^
> 5 | interface MyInterface {id: string;
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
> 6 | }
    | ^^
  7 |"
`;

exports[`issue-9102.ts [babel-ts] format 1`] = `
"Leading decorators must be attached to a class declaration. (2:1)
  1 | @Decorator()
> 2 | type T = 1;
    | ^
  3 | class C {}
  4 |"
`;

exports[`issue-9102.ts [typescript] format 1`] = `
"Leading decorators must be attached to a class declaration (1:1)
> 1 | @Decorator()
    | ^^^^^^^^^^^^
> 2 | type T = 1;
    | ^^^^^^^^^^^^
  3 | class C {}
  4 |"
`;
